XMPL JS 1.9.1 Fix BUG-134871- handle xmp-map directive and create new function for handling custom controllers/ directives

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gulp-tar": "^1.4.0",
     "gulp-uglify": "^1.2.0",
     "gulp-using": "0.0.1",
+    "gulp-wrap": "^0.13.0",
     "run-sequence": "^1.1.2",
     "wiredep": "^3.0.0-beta",
     "yargs": "^3.16.1"
